--- a/src/app/courses-advert/courses-advert.component.html
+++ b/src/app/courses-advert/courses-advert.component.html
@@ -44,7 +44,7 @@
             </div>
             <div class="flex items-center">
               <i class="fas fa-clock text-green-600 mr-1.5"></i>
-              <span>{{ course.estimatedDuration }} min</span>
+              <span>{{ course.estimatedDuration }} hours</span>
             </div>
             <div class="flex items-center">
               <i class="fas fa-book text-green-600 mr-1.5"></i>
