--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -45,12 +45,16 @@
     <i class="icon fas fa-hospital" style="left: 90%; animation-delay: 2.5s; color: #F44336; font-size: 32px;"></i>
   </div>
   
-  <!-- Content -->
-  <div class="hero-content">
-    <h1>PULSE CONNECT</h1>
-    <p>HEALTH INFORMATION TO YOU IN A HEARTBEAT</p>
-    <a href="/register" class="cta-button">Get Started</a>
-  </div>
+
+    
+    <div class="hero-content">
+      <h1>PULSE CONNECT</h1>
+      <p>HEALTH INFORMATION TO YOU IN A HEARTBEAT</p>
+      <div class="flex gap-4 justify-center flex-wrap">
+        <a href="/register" class="cta-button">Get Started</a>
+      </div>
+    </div>
+
   
   <!-- Scroll Indicator -->
   <div class="scroll-indicator">
