--- a/src/app/manage-community/manage-community.component.html
+++ b/src/app/manage-community/manage-community.component.html
@@ -304,7 +304,7 @@
                                 </div>
                                 <button class="text-green-600 hover:text-green-700 text-sm font-medium" (click)="loadPostDetails(post.id)">
                                     Join Discussion
-                                </button>
+                                </button>z
                             </div>
                         </div>
                     </div>
