--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -670,7 +670,7 @@
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <form (ngSubmit)="createPost()">
+            <form (ngSubmit)="createPostWithFilter()">
                 <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-medium mb-2">Post Type</label>
                     <select class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-green-500"
