--- a/src/app/course-view/course-view.component.html
+++ b/src/app/course-view/course-view.component.html
@@ -293,20 +293,9 @@
             <div class="bg-white rounded-xl shadow-sm p-6">
                 <h2 class="text-lg font-bold text-gray-800 mb-4">Course Resources</h2>
                 <ul class="space-y-3">
+                   
                     <li>
-                        <a href="#" class="flex items-center text-green-600 hover:text-green-700">
-                            <i class="fas fa-book mr-2"></i>
-                            <span>Full Course Handbook</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="flex items-center text-green-600 hover:text-green-700">
-                            <i class="fas fa-headphones mr-2"></i>
-                            <span>Audio Lessons</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="flex items-center text-green-600 hover:text-green-700">
+                        <a href="/community" class="flex items-center text-green-600 hover:text-green-700">
                             <i class="fas fa-comments mr-2"></i>
                             <span>Discussion Forum</span>
                         </a>
